--- a/ondas/style.css
+++ b/ondas/style.css
@@ -164,14 +164,14 @@ aside {
 }
 
 .modal {
-    display: none; /* Escondido por padrão */
+    display: none; 
     position: fixed;
     z-index: 1;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Fundo transparente escuro */
+   
 }
 
 .modal-content {
@@ -182,6 +182,7 @@ aside {
     width: 80%;
     max-width: 500px;
     text-align: center;
+    border: 1px solid #0e68cf;
 }
 
 .close {
@@ -313,7 +314,7 @@ aside {
     justify-content: center;
     align-items: center;
     z-index: 1000;
-    transform: translate(3%, 5%); /* Centraliza o modal */
+    transform: translate(3%, 5%);
     
 }
 
@@ -322,7 +323,7 @@ aside {
     padding: 20px;
     width: 100%;
     overflow-y: auto;
-    border: 2px solid #4990c6; 
+    /* border: 2px solid #4990c6;  */
     border-radius: 10px; 
 }
 
@@ -336,6 +337,7 @@ aside {
     height: auto;
     margin-bottom: 15px;
     margin-left: 10%;
+    border-radius: 6px;
 }
 .amplitude img{
     width: 40%;
@@ -373,6 +375,15 @@ aside {
     justify-content: center;
     align-items: center;
 }
+
+.retanguloUVA:hover,
+.retanguloUVB:hover,
+.retanguloUVC:hover{
+    transform: scale(1.1); 
+    cursor: pointer; 
+}
+
+
 .retanguloUVA{
     border: 1px solid #800080;
     background-color: rgb(216, 98, 216);
@@ -413,7 +424,8 @@ aside {
 #conteudoraiox-modal li,
 #conteudoraiog-modal li{
     font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #0e68cf;
     margin-top: 10px;
 }
 #conteudoradio-modal p,
@@ -423,7 +435,7 @@ aside {
 #conteudoultravioleta-modal p,
 #conteudoraiox-modal p,
 #conteudoraiog-modal p {
-    color: #555;
+    color: #000000;
     line-height: 1.6;
     margin-bottom: 10px;
 }
@@ -476,22 +488,61 @@ aside {
     text-decoration: none;
 }
 
-#caracteristicas{
+#section2{
     margin-top: 10%;
-    margin-left: 5%;
+}
+#ondamecanica img{
+    width: 80%;
 }
 
-* {
+#tipos{
+    font-size: 30px;
+    margin-top: 3%;
+}
+.tiposmecanicas {
+    width: 90%;
+    margin: 0 auto;
+}
+.imgtxt {
+    display: flex; 
+    align-items: center; 
+    gap: 15px; 
+    margin-bottom: 10px; 
+}
+
+.imgtxt img {
+    width: 500px;
+    height: auto; 
+    border-radius: 10px; 
+}
+
+.imgtxt p {
+    flex: 1; 
     margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+    color: #000000;
+}
+
+.arrow-text {
+    display: flex; 
+    align-items: center; 
+    gap: 10px; 
+    margin-bottom: 10px; 
+}
+.arrow-text i {
+    font-size: 18px; 
+    color: #4990c6; 
 }
 
 
+#section3{
+    margin-top: 10%;
+}
 
 .wave-attributes {
+    margin-left: 5%;
+    width: 90%;
     display: grid;
-    grid-template-columns: repeat(3, 1fr); 
+    grid-template-columns: repeat(3, 2fr); 
     gap: 20px;
     margin-bottom: 40px;
 }
@@ -500,12 +551,12 @@ aside {
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    padding: 20px;
+    padding: 30px;
     transition: transform 0.3s ease;
 }
 
 .attribute:hover {
-    transform: translateY(-10px);
+    transform: translateY(-15px);
 }
 
 h4 {
@@ -522,20 +573,12 @@ h4 {
 
 .wave-attributes-bottom {
     display: grid;
-    grid-template-columns: repeat(3, 1fr); 
-    gap: 20px;
+    flex-wrap: wrap;
+    
 }
 
-@media (max-width: 768px) {
-    .wave-attributes {
-        grid-template-columns: 1fr; 
-    }
-    .wave-attributes-bottom {
-        grid-template-columns: 1fr; 
-    }
-}
 .onda {
-    margin-left: 100%;
+    margin-left: 9%;
     width: 100%;
     height: auto;
 }
